--- a/MUDserver.cbp
+++ b/MUDserver.cbp
@@ -14,9 +14,6 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
-				<Linker>
-					<Add library="ws2_32" />
-				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/MUDserver" prefix_auto="1" extension_auto="1" />
@@ -45,7 +42,13 @@
 		<Unit filename="ConnectionList.hpp" />
 		<Unit filename="Server.cpp" />
 		<Unit filename="Server.hpp" />
+		<Unit filename="TCPAcceptor.cpp" />
+		<Unit filename="TCPAcceptor.h" />
+		<Unit filename="TCPStream.cpp" />
+		<Unit filename="TCPStream.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="wsinet.cpp" />
+		<Unit filename="wsinet.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
