--- a/MUDServer_libevent.vcxproj
+++ b/MUDServer_libevent.vcxproj
@@ -150,6 +150,7 @@
   <ItemGroup>
     <ClCompile Include="ConnectionList.cpp" />
     <ClCompile Include="EntityList.cpp" />
+    <ClCompile Include="FileParser.cpp" />
     <ClCompile Include="GameEntity.cpp" />
     <ClCompile Include="GameWorld.cpp" />
     <ClCompile Include="Item.cpp" />
@@ -165,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EntityList.h" />
+    <ClInclude Include="FileParser.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="GameWorld.h" />
     <ClInclude Include="ConnectionList.h" />
