--- a/MUDServer_libevent.vcxproj
+++ b/MUDServer_libevent.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="TCPListener.cpp" />
     <ClCompile Include="TCPStream.cpp" />
+    <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EntityList.h" />
@@ -179,6 +180,7 @@
     <ClInclude Include="Server.h" />
     <ClInclude Include="TCPListener.h" />
     <ClInclude Include="TCPStream.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
