--- a/MUDserver.cbp
+++ b/MUDserver.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-std=c++14" />
 				</Compiler>
 				<Linker>
 					<Add library="pthread" />
@@ -58,6 +59,8 @@
 		<Unit filename="Parser.h" />
 		<Unit filename="Player.cpp" />
 		<Unit filename="Player.h" />
+		<Unit filename="PlayerStats.cpp" />
+		<Unit filename="PlayerStats.h" />
 		<Unit filename="Room.cpp" />
 		<Unit filename="Room.h" />
 		<Unit filename="Server.cpp" />
