--- a/MUDServer_libevent.vcxproj
+++ b/MUDServer_libevent.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Battle.cpp" />
     <ClCompile Include="BattleList.cpp" />
     <ClCompile Include="CharacterClass.cpp" />
+    <ClCompile Include="CharacterClassList.cpp" />
     <ClCompile Include="ConnectionList.cpp" />
     <ClCompile Include="EntityList.cpp" />
     <ClCompile Include="FileParser.cpp" />
@@ -181,6 +182,7 @@
     <ClInclude Include="Battle.h" />
     <ClInclude Include="BattleList.h" />
     <ClInclude Include="CharacterClass.h" />
+    <ClInclude Include="CharacterClassList.h" />
     <ClInclude Include="EntityList.h" />
     <ClInclude Include="FileParser.h" />
     <ClInclude Include="GameEntity.h" />
