--- a/MUDServer_libevent.vcxproj.filters
+++ b/MUDServer_libevent.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="CharacterClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CharacterClassList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCPListener.h">
@@ -141,6 +144,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CharacterClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CharacterClassList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
