--- a/MUDServer_libevent.vcxproj
+++ b/MUDServer_libevent.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="CharacterClass.cpp" />
     <ClCompile Include="CharacterClassList.cpp" />
     <ClCompile Include="ConnectionList.cpp" />
+    <ClCompile Include="EntityFactory.cpp" />
     <ClCompile Include="EntityList.cpp" />
     <ClCompile Include="FileParser.cpp" />
     <ClCompile Include="GameEntity.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="CharacterClass.h" />
     <ClInclude Include="CharacterClassList.h" />
     <ClInclude Include="EntityList.h" />
+    <ClInclude Include="EntityFactory.h" />
     <ClInclude Include="FileParser.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="GameWorld.h" />
